--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "javascript-boilerplate",
+  "name": "bike-index",
   "description": "## Initial set up of Boilerplate",
   "main": "gulpfile.js",
   "license": "ISC",
