--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "javascript-boilerplate",
+  "name": "bike-index",
   "version": "1.0.0",
   "description": "## Initial set up of Boilerplate",
   "main": "gulpfile.js",
